--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* main -------------------------------------------------------*/
 html {
     scroll-behavior: smooth;
 }
@@ -32,6 +33,7 @@ a {
     position: relative;
 }
 
+/* hero----------------------------------------------------------------- */
 .hero {
     max-width: 1920px;
     height: 1570px;
@@ -227,7 +229,7 @@ input:-moz-placeholder {
     transition: transform .3s ease;
 }
 
-
+/* section-second----------------------------------------------------------------- */
 .section-second {
     position: relative;
     top: -145px;
@@ -240,6 +242,12 @@ input:-moz-placeholder {
 .section-second__img {
     flex: 0 1 40.96%;
     margin-right: 232px;
+}
+.section-second__img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 .section-second__content {
     flex: 0 1 43.29%;
